# shotgun_api3

./: .gitignore  pyproject.toml
builds/: shotgun_api3-3.5.1-py3-none-any.whl
shotgun_api3/: shotgun.py
shotgun_api3/lib/: mimetypes.py  pyparsing.py  six.py
shotgun_api3/lib/httplib2/python2/: __init__.py  auth.py
shotgun_api3/lib/httplib2/python3/: __init__.py  auth.py
shotgun_api3/lib/mockgun/: mockgun.py  schema.py
tests/: test_312_import.py
