[tool.poetry]
name = "shotgun-api3"
version = "3.5.1"
description = "Flow Production Tracking Python API."
authors = ["Autodesk"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.6"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
